SGAS Luts Server Change Log (from version 3.0.0 and onwords)

3.8.0

Mostly refactorization of the code with added support for handling
diffrent parts of SGAS/Luts as plugins loaded when needed.

Added tool for basic UR/SR db maintainance.

Some important upgrade notes:

- Backward compatability view -> view:all and insert -> jobinsert in authz.conf are removed.

- Loading of plugins must be done in sgas.conf (see docs/plugins for more information).

- No changes to the database is done.

3.7.2

Add support for Memory tag in UR.

Fixes issues with XML schema from ARC-Jura

3.7.1

Fixes #12 CPUDuration

Fixes a missed DROP FUNCTION in upgrade from 3.6.2.

Fixes missing files in setup.py.

3.7.0

Fixes #7 added nagois plugin.

Fixes #3 Added support for Star v1.2 final. Requires updated database.
See upgrade instructions for more information.

3.6.3

Fixes #2 (GitHub Issue) UTF Multi byte chars are rejected
	Database Encoding might have to be updated. Se docs/upgrading for
	instructions.

Fixes #1 (GitHub Issue) Problem with long running, large jobs

Fix for empty <host> tag. Patch from Erik Edelmann <edelmann@csc.fi>

3.6.2

Added index jobtransferdata_usage_data_id_idx on jobtransferdata(usage_data_id) to speed up delete on entries in usagedata table.

Changed type of processors in usagedata table to integer (from smallint)
for large clusters with more then 32k cores.

Update of date range functions in query interface.
From date is now inclusive (>=) and end date is still exclusive (<).

3.6.1

Cast durations integers into bigint when summing to prevent overflow errors.

Log full stack trace of insertion errors to easy debugging.

Fix foreign key reference in storagedata table.

Set ssl_verify_depth 3; in NginX default configuration to make deep certificate
infrastructures work out of the box.

Add sgas_cert_update script for updating certs, CRLs, and restarting NginX
(forces cert/CRL reread). Contributed by Ulf Tigerstedt.

3.6.0
