@@ -1,0 +1,10 @@
+"""
+UsageRecord view resource.
+
+Author: Magnus Jonsson <magnus@hpc2n.umu.se>
+Copyright: NeIC (2015)
+"""
+
+ACTION_VIEW         = 'query'
+CTX_QUERY           = 'query'
+CTX_QUERYGROUP      = 'querygroup'
